# mlx-cpt-plus

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: copilot-instructions.md
benchmarks/: README.md  benchmark_spmf_bible.py
examples/: basic_usage.py
mlx_cpt_plus/: __init__.py  config.py  exceptions.py  model.py  version.py
mlx_cpt_plus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mlx_cpt_plus/compression/: __init__.py  compressor.py  fsc.py  subsequence_dictionary.py  virtual_token.py
mlx_cpt_plus/core/: __init__.py  alphabet.py  candidate_set.py  inverted_index.py  lookup_table.py  sequence_arena.py  sequence_store.py  support_table.py  vocabulary.py
mlx_cpt_plus/mlx/: __init__.py  batch_predict.py  compiled.py  kernels.py  ranking_kernel.py  similarity_kernel.py  tensor_utils.py  vote_kernel.py
mlx_cpt_plus/online/: __init__.py  incremental_index.py  partial_fit.py  updater.py
mlx_cpt_plus/prediction/: __init__.py  candidate_retrieval.py  next_item.py  pnr.py  predictor.py  ranking.py  similarity.py  topk.py  voting.py
mlx_cpt_plus/storage/: __init__.py  deserializer.py  metadata.py  msgpack_store.py  serializer.py  versioning.py
mlx_cpt_plus/tree/: __init__.py  branch_compression.py  compressed_node.py  node.py  prediction_tree.py  tree_builder.py  tree_iterator.py
tests/: conftest.py  test_model.py
